# platonica-books

./: Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: pull_request.yaml
app/: admin.py  authentication.py  dtos.py  models.py  schema.py  urls.py  utils.py  views.py
app/graphql/: schema.py  types.py
app/migrations/: 0001_initial.py  0002_review_uuid.py  0003_remove_book_name_book_author_book_date_finished_and_more.py  0004_auto_20250419_2002.py  0005_auto_20250630_0412.py  0006_review_content.py
app/tests/: test_jwt_auth.py
graphql/: schema.graphql
project/: settings.py  urls.py
web-app/: Makefile  codegen.yaml  eslint.config.js  package-lock.json  package.json  vite.config.ts
web-app/src/: App.tsx  TopBar.tsx  graphqlClient.ts  main.tsx  types.ts
web-app/src/Editor/: Editor.tsx  ToolBarPlugin.tsx  style.css
web-app/src/Screens/: BookCover.tsx  BookDetails.tsx  Books.tsx  GlobalErrorBoundary.tsx  LoginScreen.tsx  LogoutButton.tsx  NotFound.tsx  Review.tsx  Reviews.tsx
web-app/src/auth/: AuthProvider.tsx  RequireAuth.tsx  auth.ts  utils.ts
web-app/src/graphql/: GetBook.graphql  GetReview.graphql  GetReviews.graphql  UpdateReview.graphql
web-app/src/hooks/: useAuth.ts  useAuthGraphql.ts
